--- a/bot/template/index.html
+++ b/bot/template/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/1a1OHspdQcqOkbdyRUYxRkYrJbfw55LJMdfscAQmoqBY/" />
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/1a1OHspdQcqOkbdyRUYxRkYrJbfw55LJMdfscAQmoqBY/edit#gid=0" />
 </head>
